# sfmidi

./: CMakeLists.txt  README.md
src/frontend/: midi-test.cc
src/midi/: sfmidi.cc  sfmidi.hh
